@@ -1,7 +1,7 @@
-@comment $NetBSD: PLIST,v 1.4 2005/01/11 21:09:24 reinoud Exp $
+@comment $NetBSD: PLIST,v 1.5 2005/11/08 20:30:58 reinoud Exp $
 bin/cd_disect
 bin/cd_sessions
-bin/cdrw_format
+bin/mmc_format
 bin/newfs_udf
 bin/udfclient
 bin/udfdump
