@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.20 2005/06/26 15:24:14 reinoud Exp $
+$NetBSD: distinfo,v 1.21 2005/11/08 20:30:58 reinoud Exp $
 
-SHA1 (UDFclient.0.4.9.tgz) = 4138020cdc9f2250a105fe8aad5390773d4bfa2e
-RMD160 (UDFclient.0.4.9.tgz) = 63e7864db97484dc3f1017d3b21c9fc59d2b9796
-Size (UDFclient.0.4.9.tgz) = 213058 bytes
+SHA1 (UDFclient.0.5.tgz) = 826d1556bf6fb238da0db8aaa6948e6326a81100
+RMD160 (UDFclient.0.5.tgz) = 16efef79c51de76b887e5cf76cfdd6942298bd37
+Size (UDFclient.0.5.tgz) = 225082 bytes
